<resources>
  <string name="app_name">TimeTracker</string>

  <!-- COMMON -->
  <string name="title">Title</string>
  <string name="description">Description</string>
  <string name="error_loading_activities">Oops, there was error // TODO we need a better message</string>

  <!-- MAIN -->
  <string name="first_run_tip">To start tracking your time use \"Manage\" button, and then click \"Add activity\"</string>
  <string name="statistic_for_last_week">Statistic for last week</string>
  <string name="statistic_for_last_day">Statistic for last day</string>
  <string name="statistic_error">Error while loading statistic</string>
  <string name="statistic_untracked_duration">Untracked</string>
  <string name="track">Track</string>
  <string name="activities">Activities</string>
  <string name="add_activity">Add activity</string>
  <string name="close_menu">Close menu</string>

  <!-- ADD ACTIVITY -->
  <string name="add_activity_tip">Here you can add activity</string>

  <!-- EDIT ACTIVITY -->
  <string name="edit_activity">Edit activity</string>
  <string name="edit_activity_tip">Here you can edit activity</string>

  <!-- TRACK -->
  <string name="currently_tracking">Currently Tracking: <b>%1$s</b> </string>
  <string name="done">Done</string>

  <!-- NOTIFICATIONS -->
  <string name="no_track">No activity tracked</string>
  <string name="track_too_long">Activity tracked for too long. Please, take a break</string>
  <string name="notification_track_tip">You can track time by using "Track" button in
    TimeTracker app</string>

  <string name="action_open">Open</string>
  <string name="action_stop">Stop track</string>

  <plurals name="tracked_minutes">
    <item quantity="zero">Just started</item>
    <item quantity="one">Tracked one minute</item>
    <item quantity="few">Tracked %1$d minute</item>
    <item quantity="other">Tracked %1$d minute</item>
  </plurals>

  <plurals name="tracked_hours">
    <item quantity="zero">Just started</item>
    <item quantity="one">Tracked one hour</item>
    <item quantity="few">Tracked %1$d hours</item>
    <item quantity="other">Tracked %1$d hours</item>
  </plurals>

</resources>
