<?xml version="1.0" encoding="utf-8"?>
<me.veloc1.timetracker.screens.add_activity.AddActivityView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

  <android.support.v7.widget.AppCompatEditText
      android:id="@+id/title"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/title" />

  <android.support.v7.widget.AppCompatEditText
      android:id="@+id/description"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/description" />

  <include
      android:id="@+id/color_picker"
      layout="@layout/view_color_picker"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />

  <android.support.v7.widget.AppCompatButton
      android:id="@+id/add"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/add_activity"
      android:textColor="@android:color/white" />

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      android:gravity="center"
      android:text="@string/add_activity_tip"
      android:textColor="@color/tip"
      android:textSize="12sp" />
</me.veloc1.timetracker.screens.add_activity.AddActivityView>