<?xml version="1.0" encoding="utf-8"?>
<me.veloc1.timetracker.screens.main.view.MainView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <android.support.v7.widget.RecyclerView
      android:id="@+id/list"
      android:layout_width="match_parent"
      android:layout_height="match_parent"/>

  <TextView
      android:id="@+id/first_run_tip"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="24dp"
      android:layout_centerInParent="true"
      android:text="@string/first_run_tip"/>

  <TextView
      android:id="@+id/error"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="24dp"
      android:layout_centerInParent="true"
      android:text="@string/error_loading_activities"/>

  <android.support.design.widget.FloatingActionButton
      android:id="@+id/fab"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentRight="true"
      android:layout_alignParentEnd="true"
      android:layout_alignParentBottom="true"
      android:layout_margin="24dp"
      android:src="@android:drawable/ic_menu_manage"/>

  <View
      android:id="@+id/transit_view"
      android:layout_width="56dp"
      android:layout_height="56dp"
      android:layout_alignParentRight="true"
      android:layout_alignParentEnd="true"
      android:layout_alignParentBottom="true"
      android:layout_margin="24dp"/>

  <LinearLayout
      android:id="@+id/bottom_bar"
      android:layout_width="match_parent"
      android:layout_height="64dp"
      android:layout_alignParentBottom="true"
      android:background="@color/colorAccent"
      android:orientation="horizontal"
      android:gravity="center">

    <LinearLayout
        android:id="@+id/activities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@android:drawable/ic_menu_agenda"/>

      <TextView
          android:id="@+id/activities_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/activities"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@android:drawable/ic_menu_close_clear_cancel"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/close_menu"/>
    </LinearLayout>

  </LinearLayout>

  <include
      layout="@layout/screen_progress"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:id="@+id/progress"/>

</me.veloc1.timetracker.screens.main.view.MainView>